The file management test is completed.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h2>Files Uploaded</h2>
     <ul>
       <li><a href="./test1.html">Test #1</a></li>
+      <li><a href="./testDropzone.html">Test Dropzone.js</a></li>
     </ul>
   </body>
 </html>
